--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ma.irisi.microservice</groupId>
-	<artifactId>MicroserviceCatalogue-1</artifactId>
+	<artifactId>MicroserviceEureka-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MicroserviceCatalogue-1</name>
+	<name>MicroserviceEureka-1</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
