--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port = 8761
-server.address=localhost
+server.address= localhost
 eureka.client.register-with-eureka = false
 eureka.client.fetch-registry=false
+eureka.instance.preferIpAddress =true
+eureka.instance.hostname = eurekaServer
